canary-testing/v2/deployment_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-workshop-v2-deployment
  namespace: test-nginx-ingress-v2
  labels:
    name: test-workshop-v2-deployment
    app: test-workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-workshop-v2
  template:
    metadata:
      labels:
        app: test-workshop-v2
    spec:
      containers:
      - name: joom-rf-primary-receiver-openresty
        image: "docker.joom.it/rf-receiver-openresty:latest"
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
          - name: metrics
            containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/rf-receiver/nginx/
      volumes:
        - name: nginx-conf
          configMap:
            name: test-workshop-nginx-conf-v2-cfgmap
