canary-testing/v2/service_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-workshop-v2-svc
  namespace: test-nginx-ingress-v2
  labels:
    name: test-workshop-v2-svc
    app: test-workshop
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: metrics
  selector:
    app: test-workshop-v2
