canary-testing/v2/ingress_v2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-workshop-ingress
  namespace: test-nginx-ingress-v2
  labels:
    name: test-workshop-ingress
    app: test-workshop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "joomcanary"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  rules:
    - host: testingress.sandbox.k8s.joomdev.net
      http:
        paths:
          - path: /
            backend:
              serviceName: test-workshop-v2-svc
              servicePort: 80
